tests/fixtures/invalid/float_bitxor_none.py
# Cannot bitwise XOR Float and None
x: float = 1.0 ^ None
